<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">PDF to TXT Reader</string>
  <string name="item_open">Open with default app</string>
  <string name="item_delete">Delete from cache</string>
  <string name="menu_settings">Settings</string>
  <string name="pref_light_theme">Light theme</string>
  <string name="pref_light_theme_summary">Use the light theme(application needs restart)</string>
  <string name="load_more">Load more</string>
  <string name="open_doc">Convert PDF to TXT</string>
  <string name="pref_font_size">Font size</string>
  <string name="pref_font_size_summary">Font size of text view</string>
  <string-array name="font_size_name">
    <item>Small</item>
    <item>Normal</item>
    <item>Large</item>
    <item>Huge</item>
  </string-array>
  <string-array name="font_size_value">
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
  </string-array>
  <string name="pref_cat_personalization">Personalization</string>
  <string name="pref_cat_convert">Convert PDF to TXT</string>
  <string name="pref_convert_warn">Convert Warning</string>
  <string name="pref_convert_warn_summary">Display warning message before convertion</string>
  <string name="warn_dont_show_again">Don\'t show again</string>
  <string name="warn_msg">PLEASE NOTE: This tool can only extract pure text in the PDF file, and can not convert <font color='red'>IMAGES</font> to text. You will need OCR tools to convert images to text.</string>
</resources>
